--- a/assets/video_looper.ini
+++ b/assets/video_looper.ini
@@ -109,8 +109,7 @@ mount_path = /mnt/usbdrive
 
 # Whether to mount the USB drives as readonly (true) or writable (false). It is
 # recommended to mount USB drives readonly for reliability.
-readonly = true
-
+readonly = false
 
 # Directory file reader configuration follows.
 [directory]
